--- a/app/src/main/res/layout/activity_magnetic.xml
+++ b/app/src/main/res/layout/activity_magnetic.xml
@@ -74,15 +74,22 @@
                 app:cardCornerRadius="5sp"
                 android:layout_margin="10sp">
 
-                <ScrollView
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
 
-                    <LinearLayout
+                    <com.github.mikephil.charting.charts.PieChart
+                        android:id="@+id/chart1"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:gravity="center">
+                        android:layout_height="0sp"
+                        android:layout_weight="3"
+                        android:background="@android:color/white"/>
+
+                    <ScrollView
+                        android:layout_width="match_parent"
+                        android:layout_height="0sp"
+                        android:layout_weight="2">
 
                         <GridLayout
                             android:layout_width="match_parent"
@@ -273,9 +280,9 @@
                                 android:textStyle="bold" />
                         </GridLayout>
 
-                    </LinearLayout>
+                    </ScrollView>
 
-                </ScrollView>
+                </LinearLayout>
 
             </android.support.v7.widget.CardView>
 
