--- a/app/src/main/res/layout/fragment_text_scan_test.xml
+++ b/app/src/main/res/layout/fragment_text_scan_test.xml
@@ -1,47 +1,164 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.design.widget.CoordinatorLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:id="@+id/coordinator_layout"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".view.test_activity.tests.text_scan_test_fragment.TextScanTestFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:background="@color/colorTextFour">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="55sp"
+            android:orientation="horizontal"
+            android:background="@color/white"
+            android:layout_margin="10sp">
+
+                <ImageView
+                    android:layout_width="0sp"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent"
+                    android:tint="@color/red_shade_four"
+                    android:padding="5sp"
+                    android:background="?android:attr/selectableItemBackground"
+                    android:src="@drawable/baseline_photo_library_black_48"
+                    android:id="@+id/select_image_from_gallery"
+                    tools:ignore="ContentDescription" />
+
+            <ImageView
+                android:layout_width="1sp"
+                android:layout_height="match_parent"
+                android:background="@color/red_shade_five"
+                tools:ignore="ContentDescription" />
+
+                <ImageView
+                    android:layout_width="0sp"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent"
+                    android:tint="@color/red_shade_four"
+                    android:padding="5sp"
+                    android:background="?android:attr/selectableItemBackground"
+                    android:src="@drawable/baseline_photo_camera_black_48"
+                    android:id="@+id/capture_image"
+                    tools:ignore="ContentDescription" />
+
+
+        </LinearLayout>
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="0sp"
+            android:layout_weight="1"
+            android:layout_marginTop="10sp"
+            android:layout_marginBottom="20sp"
+            android:layout_marginLeft="20sp"
+            android:layout_marginRight="20sp"
+            app:cardCornerRadius="15sp"
+            app:cardElevation="10sp">
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#ffe4b9">
+
+                <ImageView
+                    android:layout_width="100sp"
+                    android:layout_height="100sp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/gallery_three"
+                    tools:ignore="ContentDescription" />
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="50sp"
+                    android:background="#ff8b10"
+                    android:layout_gravity="bottom"
+                    tools:ignore="ContentDescription" />
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop"
+                    android:id="@+id/image_to_work_on"
+                    tools:ignore="ContentDescription" />
+
+            </FrameLayout>
+
+        </android.support.v7.widget.CardView>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50sp"
+            android:orientation="horizontal"
+            android:background="@color/white"
+            android:layout_margin="10sp"
+            android:gravity="center_horizontal">
+
+            <ImageView
+                android:layout_width="0sp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                android:tint="@color/red_shade_four"
+                android:background="?android:attr/selectableItemBackground"
+                android:src="@drawable/baseline_rotate_left_black_48"
+                tools:ignore="ContentDescription"
+                android:id="@+id/rotate_left"
+                android:padding="10sp"/>
+
+            <ImageView
+                android:layout_width="1sp"
+                android:layout_height="match_parent"
+                android:background="@color/red_shade_five"
+                tools:ignore="ContentDescription" />
+
+            <ImageView
+                android:layout_width="0sp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                android:tint="@color/red_shade_four"
+                android:background="?android:attr/selectableItemBackground"
+                android:src="@drawable/baseline_crop_black_48"
+                tools:ignore="ContentDescription"
+                android:id="@+id/crop_image"
+                android:padding="10sp"
+                android:visibility="gone"/>
+
+            <ImageView
+                android:layout_width="1sp"
+                android:layout_height="match_parent"
+                android:background="@color/red_shade_five"
+                tools:ignore="ContentDescription"
+                android:visibility="gone"/>
+
+            <ImageView
+                android:layout_width="0sp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                android:tint="@color/red_shade_four"
+                android:background="?android:attr/selectableItemBackground"
+                android:src="@drawable/baseline_rotate_right_black_48"
+                tools:ignore="ContentDescription"
+                android:id="@+id/rotate_right"
+                android:padding="10sp"/>
+
+        </LinearLayout>
 
         <Button
-            android:layout_width="0sp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="GALLERY"
-            tools:ignore="HardcodedText"
-            android:id="@+id/select_image_from_gallery"/>
-
-        <Button
-            android:layout_width="0sp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="CLICK PHOTO"
-            tools:ignore="HardcodedText"
-            android:id="@+id/capture_image"/>
+            android:layout_width="match_parent"
+            android:layout_height="?android:attr/actionBarSize"
+            android:id="@+id/done_button"
+            android:textColor="@color/white"
+            android:text="DONE! SHOW RESULTS"
+            android:backgroundTint="@color/green_shade_three"
+            tools:ignore="HardcodedText" />
 
     </LinearLayout>
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="0sp"
-        android:layout_weight="1"
-        android:scaleType="centerCrop"
-        android:id="@+id/image_to_work_on"
-        tools:ignore="ContentDescription" />
-
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="?android:attr/actionBarSize"
-        android:id="@+id/done_button"
-        android:text="DONE! SHOW RESULTS"
-        tools:ignore="HardcodedText" />
-
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
