--- a/app/src/main/res/layout/activity_learn_more.xml
+++ b/app/src/main/res/layout/activity_learn_more.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    tools:context=".view.learn_more_activity.LearnMoreActivity"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".view.learn_more_activity.LearnMoreActivity">
+    android:background="@color/colorTextFour">
 
     <ImageView
         android:layout_width="match_parent"
@@ -15,7 +16,9 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="?android:attr/actionBarSize"
+        android:layout_height="wrap_content"
+        android:paddingTop="10sp"
+        android:paddingBottom="10sp"
         android:background="@color/white"
         tools:text="MORE ABOUT ACCELEROMETER SENSOR"
         android:textSize="18sp"
@@ -29,133 +32,11 @@
         android:background="@color/colorMajorDark"
         tools:ignore="ContentDescription,SmallSp" />
 
-    <ScrollView
+    <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="0sp"
-        android:layout_weight="1"
-        android:background="@color/white"
-        android:descendantFocusability="blocksDescendants"
-        android:id="@+id/scroll_view">
+        android:layout_height="match_parent"
+        android:id="@+id/recycler">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="300sp"
-                android:layout_margin="10sp"
-                app:cardCornerRadius="5sp"
-                app:cardElevation="3sp">
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@color/colorTextThree"
-                    android:id="@+id/text_image"
-                    tools:ignore="ContentDescription" />
-
-            </android.support.v7.widget.CardView>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="?android:attr/actionBarSize"
-                tools:text="@string/dummy_header"
-                android:textSize="19sp"
-                android:textColor="@color/colorTextOne"
-                android:gravity="center"
-                android:id="@+id/header_text"/>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                tools:text="@string/dummy_description"
-                android:textSize="17sp"
-                android:textColor="@color/colorTextTwo"
-                android:id="@+id/description_text"
-                android:paddingLeft="10sp"
-                android:paddingRight="10sp"/>
-
-        </LinearLayout>
-
-    </ScrollView>
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="3sp"
-        android:background="@color/colorTextFour"
-        tools:ignore="ContentDescription,SmallSp" />
-
-    <com.shuhart.stepview.StepView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/step_view"
-        android:padding="16dp"
-        app:sv_selectedCircleColor="@color/colorMajorDark"
-        app:sv_selectedTextColor="@color/colorMajorDark"
-        app:sv_stepLineWidth="1dp"
-        app:sv_stepPadding="4dp"
-        app:sv_nextTextColor="@color/colorMajorDark"
-        app:sv_nextStepLineColor="@color/colorMajorDark"
-        app:sv_doneCircleColor="@color/colorMajorDark"
-        app:sv_doneStepLineColor="@color/colorMajorDark"
-        app:sv_doneCircleRadius="12dp"
-        app:sv_selectedCircleRadius="12dp"
-        app:sv_selectedStepNumberColor="@color/white"
-        app:sv_stepViewStyle="@style/StepView"
-        app:sv_doneStepMarkColor="@color/white"
-        app:sv_stepNumberTextSize="12sp"
-        app:sv_animationType="Line"
-        tools:sv_stepsNumber="4"
-        android:background="@color/white"/>
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="1sp"
-        android:background="@color/colorTextFour"
-        tools:ignore="ContentDescription,SmallSp"/>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="?android:attr/actionBarSize"
-        android:orientation="horizontal"
-        android:baselineAligned="false"
-        android:background="@color/white">
-
-        <TextView
-            android:id="@+id/previous"
-            android:layout_width="0sp"
-            android:layout_weight="1"
-            android:layout_height="match_parent"
-            android:textSize="16sp"
-            android:text="@string/previous"
-            android:textColor="@color/colorMajorDark"
-            android:background="@drawable/btn_bg"
-            fontPath="fonts/tsc.ttf"
-            android:gravity="center"
-            tools:ignore="MissingPrefix,RtlHardcoded,RtlSymmetry"/>
-
-        <ImageView
-            android:layout_width="1sp"
-            android:layout_height="match_parent"
-            android:background="@color/colorTextFour"
-            tools:ignore="ContentDescription,SmallSp" />
-
-        <TextView
-            android:id="@+id/next"
-            android:layout_width="0sp"
-            android:layout_weight="1"
-            android:layout_height="match_parent"
-            android:textSize="16sp"
-            android:text="@string/next"
-            android:textColor="@color/colorMajorDark"
-            android:background="@drawable/btn_bg"
-            fontPath="fonts/tsc.ttf"
-            android:gravity="center"
-            android:layout_gravity="center"
-            tools:ignore="MissingPrefix,RtlHardcoded,RtlSymmetry"/>
-
-    </LinearLayout>
+    </android.support.v7.widget.RecyclerView>
 
 </LinearLayout>
