--- a/app/src/main/res/layout/fragment_timer.xml
+++ b/app/src/main/res/layout/fragment_timer.xml
@@ -1,172 +1,203 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.design.widget.CoordinatorLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/coordinator"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     tools:context=".view.tool_activity.everyday_tools.timer.TimerFragment">
 
-    <FrameLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0sp"
-        android:layout_weight="1"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <android.support.v7.widget.CardView
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:cardElevation="10sp"
-            android:layout_margin="25sp">
+            android:layout_height="0sp"
+            android:layout_weight="1"
+            android:orientation="vertical">
 
-            <LinearLayout
+            <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingTop="20sp"
-                android:paddingBottom="20sp">
+                app:cardElevation="10sp"
+                android:layout_margin="25sp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:paddingTop="20sp"
+                    android:paddingBottom="20sp">
+
+                    <TextView
+                        android:layout_width="0sp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:textColor="@color/primary_new"
+                        android:text="00"
+                        android:textSize="40sp"
+                        android:padding="10sp"
+                        android:gravity="center_horizontal"
+                        tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry" />
+
+                    <TextView
+                        android:layout_width="0sp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.5"
+                        android:textColor="@color/primary_new_light_light"
+                        android:text="h"
+                        android:textSize="20sp"
+                        tools:ignore="HardcodedText" />
+
+                    <TextView
+                        android:layout_width="0sp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:textColor="@color/primary_new"
+                        android:text="00"
+                        android:textSize="40sp"
+                        android:padding="10sp"
+                        android:gravity="center_horizontal"
+                        tools:ignore="HardcodedText" />
+
+                    <TextView
+                        android:layout_width="0sp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.5"
+                        android:textColor="@color/primary_new_light_light"
+                        android:text="m"
+                        android:textSize="20sp"
+                        tools:ignore="HardcodedText" />
+
+                    <TextView
+                        android:layout_width="0sp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:textColor="@color/primary_new"
+                        android:text="00"
+                        android:textSize="40sp"
+                        android:padding="10sp"
+                        android:gravity="center_horizontal"
+                        tools:ignore="HardcodedText" />
+
+                    <TextView
+                        android:layout_width="0sp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.5"
+                        android:textColor="@color/primary_new_light_light"
+                        android:text="s"
+                        android:textSize="20sp"
+                        tools:ignore="HardcodedText" />
+
+                </LinearLayout>
+
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10sp"
+                app:cardCornerRadius="20sp"
+                app:cardBackgroundColor="@color/primary_new_light"
+                android:layout_gravity="center_horizontal"
+                android:id="@+id/set_timer">
 
                 <TextView
-                    android:layout_width="0sp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:textColor="@color/primary_new"
-                    android:text="00"
-                    android:textSize="40sp"
-                    android:padding="10sp"
-                    android:gravity="center_horizontal"
-                    tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry" />
-
-                <TextView
-                    android:layout_width="0sp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.5"
-                    android:textColor="@color/primary_new_light_light"
-                    android:text="h"
-                    android:textSize="20sp"
+                    android:textColor="@color/white"
+                    android:text="CLICK TO SET TIMER"
+                    android:textSize="16sp"
+                    android:paddingTop="10sp"
+                    android:paddingBottom="10sp"
+                    android:paddingLeft="20sp"
+                    android:paddingRight="20sp"
                     tools:ignore="HardcodedText" />
 
-                <TextView
-                    android:layout_width="0sp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:textColor="@color/primary_new"
-                    android:text="00"
-                    android:textSize="40sp"
-                    android:padding="10sp"
-                    android:gravity="center_horizontal"
-                    tools:ignore="HardcodedText" />
+            </android.support.v7.widget.CardView>
 
-                <TextView
-                    android:layout_width="0sp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.5"
-                    android:textColor="@color/primary_new_light_light"
-                    android:text="m"
-                    android:textSize="20sp"
-                    tools:ignore="HardcodedText" />
+        </LinearLayout>
 
-                <TextView
-                    android:layout_width="0sp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:textColor="@color/primary_new"
-                    android:text="00"
-                    android:textSize="40sp"
-                    android:padding="10sp"
-                    android:gravity="center_horizontal"
-                    tools:ignore="HardcodedText" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="70sp"
+            android:orientation="horizontal">
 
-                <TextView
-                    android:layout_width="0sp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.5"
-                    android:textColor="@color/primary_new_light_light"
-                    android:text="s"
-                    android:textSize="20sp"
-                    tools:ignore="HardcodedText" />
+            <ImageView
+                android:layout_width="0sp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:src="@drawable/round_play_arrow_black_48"
+                android:padding="10sp"
+                android:id="@+id/play"
+                android:tint="@color/colorTextFour"
+                tools:ignore="ContentDescription" />
 
-            </LinearLayout>
+            <ImageView
+                android:layout_width="0sp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:src="@drawable/round_pause_black_48"
+                android:padding="10sp"
+                android:id="@+id/pause"
+                android:tint="@color/colorTextFour"
+                tools:ignore="ContentDescription" />
 
-        </android.support.v7.widget.CardView>
+            <ImageView
+                android:layout_width="0sp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:src="@drawable/round_clear_black_48"
+                android:padding="10sp"
+                android:id="@+id/reset"
+                android:tint="@color/colorTextFour"
+                tools:ignore="ContentDescription" />
 
-    </FrameLayout>
+        </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="70sp"
-        android:orientation="horizontal">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-        <ImageView
-            android:layout_width="0sp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:src="@drawable/round_play_arrow_black_48"
-            android:padding="10sp"
-            android:id="@+id/play"
-            android:tint="@color/colorTextOne"
-            tools:ignore="ContentDescription" />
+            <TextView
+                android:layout_width="0sp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textColor="@color/colorTextOne"
+                android:text="Play"
+                android:textSize="18sp"
+                android:padding="5sp"
+                android:gravity="center_horizontal"
+                tools:ignore="HardcodedText"/>
 
-        <ImageView
-            android:layout_width="0sp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:src="@drawable/round_pause_black_48"
-            android:padding="10sp"
-            android:id="@+id/pause"
-            android:tint="@color/colorTextFour"
-            tools:ignore="ContentDescription" />
+            <TextView
+                android:layout_width="0sp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textColor="@color/colorTextOne"
+                android:text="Pause"
+                android:textSize="18sp"
+                android:padding="5sp"
+                android:gravity="center_horizontal"
+                tools:ignore="HardcodedText" />
 
-        <ImageView
-            android:layout_width="0sp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:src="@drawable/round_clear_black_48"
-            android:padding="10sp"
-            android:id="@+id/reset"
-            android:tint="@color/colorTextFour"
-            tools:ignore="ContentDescription" />
+            <TextView
+                android:layout_width="0sp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textColor="@color/colorTextOne"
+                android:text="Reset"
+                android:textSize="18sp"
+                android:padding="5sp"
+                android:gravity="center_horizontal"
+                tools:ignore="HardcodedText" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="0sp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:textColor="@color/colorTextOne"
-            android:text="Play"
-            android:textSize="18sp"
-            android:padding="5sp"
-            android:gravity="center_horizontal"
-            tools:ignore="HardcodedText"/>
-
-        <TextView
-            android:layout_width="0sp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:textColor="@color/colorTextOne"
-            android:text="Pause"
-            android:textSize="18sp"
-            android:padding="5sp"
-            android:gravity="center_horizontal"
-            tools:ignore="HardcodedText" />
-
-        <TextView
-            android:layout_width="0sp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:textColor="@color/colorTextOne"
-            android:text="Reset"
-            android:textSize="18sp"
-            android:padding="5sp"
-            android:gravity="center_horizontal"
-            tools:ignore="HardcodedText" />
-
-    </LinearLayout>
-
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
